--- a/index.html
+++ b/index.html
@@ -7,12 +7,153 @@
 	<link rel="stylesheet" href="#">
 
 	<style>
-		
+
+	body {
+		margin: 0px;
+		font-family: sans-serif;
+		font-weight: normal;
+	}
+
+.imagen1 {
+	width: auto;
+    background-image: url("images/bg.jpeg");
+    background-size: 100% 200%;*
+    background-repeat: no-repeat;
+    padding: 2.5em 14em;
+    background-position: 0px; 
+}
+
+h1 {
+	font-family: sans-serif;
+	font-weight: normal;
+	margin-top: 100px;
+	color: white;
+	text-align: center;
+	line-height: 60px;
+	font-size: 44px;
+}
+
+
+
+.parrafo1 {
+	color: white;
+	text-align: center;
+	margin-top: 60px;
+}
+
+.logo {
+	width: 150px;
+	float: left;
+	left: 200px;
+	top: 20px;
+}
+
+.botones {
+	text-align: center;
+	margin: 0 auto;
+}
+
+.boton {
+	background-color: #337ab7;
+    border-radius: 10px;
+    padding: 20px;
+    margin-right: 10px;
+    color: white;
+    text-decoration: none;
+}
+
+.boton1 {
+    
+}
+
+.boton2 {
+	background-color: #5cb85c;
+}
+
+.menu {
+	float: right;
+}
+
+.menu a {
+	text-decoration: none;
+	color: gray;
+	font-size: 15px;
+}
+
+.menu ul {
+	list-style: none;
+	display: -webkit-inline-box;
+}
+
+.menu li {
+	margin-right: 20px;
+}
+
+.centro {
+    padding: 0 100px;
+}
+
+.parte2 {
+	text-align: center;
+	padding: 5em 10em;
+}
+
+.formulario {
+	text-align: center;
+
+}
+
+.formulario input , .formulario button {
+	padding: 5px;
+	border:1px solid #ccc;
+}
+
+.formulario input {
+
+}
+
+.formulario button {
+	background-color: transparent;
+}
+
+	
 	</style>
 </head>
 <body>
+	<div class="imagen1">
+		<img class="logo" src="images/latam_logo.png" alt="Desafio LATAM">
+		<nav class="menu">
+			<ul>
+				<li><a href="#" title="Equipo">Equipo</a></li>
+				<li><a href="#" title="Blog">Blog</a></li>
+				<li><a href="#" title="Contacto">Contacto</a></li>
+			</ul>
+		</nav>
 
-	
+		<div class="centro">
+			<h1>COMIENZA UNA NUEVA VIDA Y ÚNETE AL MUNDO TECNOLÓGICO</h1>
+			<div class="botones">
+				<a class="boton boton1" href="#">Comienza acá!</a>
+				<a class="boton boton2" href="#">Más Info</a>
+			</div>
+			<p class="parrafo1" >Hay una escasez gigante de desarrolladores en el mundo y más aún en Latinoamérica, se necesitan más desarrolladores y Tú puedes ser uno!</p>
+		</div>
+	</div>
+
+	<div class="parte2">
+		<h2>EL BOOTCAMP DE PROGRAMACIÓN MÁS GRANDE DE LATINOAMÉRICA</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		</p>
+		<img class="grupo" src="images/viewing-gallery-for-happy-people.png" alt="grupo">
+	</div>
+
+<form class="formulario" action="#" method="get" accept-charset="utf-8">
+	<input type="text" placeholder="ingresa tu mail">
+	<button type="submit">Enviar</button>
+</form>
+
 	
 </body>
 </html>
