imagen lista y sin borde de abajo

--- a/index.html
+++ b/index.html
@@ -93,13 +93,23 @@ h1 {
     padding: 0 100px;
 }
 
-.parte2 {
+.parte2, .parte3 {
 	text-align: center;
-	padding: 5em 10em;
+	padding: 5em 5em 0 5em;
+}
+
+.parte3 {
+	padding-bottom: 5em;
+	background-color: #fafafa;
+	border-top: 2px solid #ececec;
+	border-bottom: 2px solid #ececec;
 }
 
 .grupo {
 	width: 50%;
+	display: inherit;
+	position: relative;
+	left: 25%;
 }
 
 .formulario {
@@ -150,7 +160,12 @@ h1 {
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		</p>
-		<img class="grupo" src="images/viewing-gallery-for-happy-people.png" alt="grupo">
+	</div>
+	<img class="grupo" src="images/viewing-gallery-for-happy-people.png" alt="grupo">
+
+	<div class="parte3">
+		<h2>SOLICITA INFORMACIÓN E INSCRÍBETE</h2>
+		
 	</div>
 
 <form class="formulario" action="#" method="get" accept-charset="utf-8">
