penultima parte lista

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ h1 {
 	background-color: #5cb85c;
 }
 
+.boton3 {
+	margin: 10px;
+}
+
 .menu {
 	float: right;
 }
@@ -95,11 +99,11 @@ h1 {
 
 .parte2, .parte3 {
 	text-align: center;
-	padding: 5em 5em 0 5em;
+	padding: 4em 5em 0 5em;
 }
 
 .parte3 {
-	padding-bottom: 5em;
+	padding-bottom: 3em;
 	background-color: #fafafa;
 	border-top: 2px solid #ececec;
 	border-bottom: 2px solid #ececec;
@@ -110,6 +114,14 @@ h1 {
 	display: inherit;
 	position: relative;
 	left: 25%;
+}
+
+.parrafo3 {
+	margin-bottom: 40px;
+}
+
+.parrafo4 {
+	margin-top: 40px;
 }
 
 .formulario {
@@ -156,7 +168,7 @@ h1 {
 
 	<div class="parte2">
 		<h2>EL BOOTCAMP DE PROGRAMACIÓN MÁS GRANDE DE LATINOAMÉRICA</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<p class="parrafo2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		</p>
@@ -165,7 +177,12 @@ h1 {
 
 	<div class="parte3">
 		<h2>SOLICITA INFORMACIÓN E INSCRÍBETE</h2>
-		
+		<p class="parrafo3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		</p>
+		<a class="boton boton3" href="#">Inscribete!</a>
+		<p class="parrafo4">Vive la experiencia Desafio LATAM!</p>
 	</div>
 
 <form class="formulario" action="#" method="get" accept-charset="utf-8">
