--- a/index.html
+++ b/index.html
@@ -124,6 +124,17 @@ h1 {
 	margin-top: 40px;
 }
 
+.contacto {
+	width: 25%;
+	float: left;
+	line-height: 1.5;
+	margin-left: 25%;
+}
+
+.tituloabajo {
+	margin-top: 0px;
+}
+
 .formulario {
 	text-align: center;
 
@@ -140,6 +151,11 @@ h1 {
 
 .formulario button {
 	background-color: transparent;
+}
+
+.ultimaparte {
+	padding: 4em;
+
 }
 
 	
@@ -185,11 +201,27 @@ h1 {
 		<p class="parrafo4">Vive la experiencia Desafio LATAM!</p>
 	</div>
 
-<form class="formulario" action="#" method="get" accept-charset="utf-8">
-	<input type="text" placeholder="ingresa tu mail">
-	<button type="submit">Enviar</button>
-</form>
+	<div class="ultimaparte">
 
+		<div class="contacto">
+			<h2 class="tituloabajo">Contacto</h2>
+			<p><b>Desafio LATAM</b></br>
+			Ezequias Allende 2361</br>
+			P +569 9284829284</p>
+			
+		</div>
+
+		
+			<h2 class="tituloabajo">Suscríbete</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
+			<form class="formulario" action="#" method="get" accept-charset="utf-8">
+				<input type="text" placeholder="ingresa tu mail">
+				<button type="submit">Enviar</button>
+			</form>
+			
+	
+
+	</div>
 	
 </body>
 </html>
