--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@ h1 {
 	margin-top: 0px;
 }
 
+.suscribete {
+	padding-top: 3px;
+}
+
 .formulario {
-	text-align: center;
+	text-align: left;
 
 }
 
@@ -156,6 +160,17 @@ h1 {
 .ultimaparte {
 	padding: 4em;
 
+}
+
+footer {
+	color: white;
+	font-size: 10px;
+	background-color: #222222;
+}
+
+footer h2 {
+	margin:0px;
+	padding:30px;
 }
 
 	
@@ -211,17 +226,22 @@ h1 {
 			
 		</div>
 
-		
+		<div class="suscribete">
 			<h2 class="tituloabajo">Suscríbete</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
 			<form class="formulario" action="#" method="get" accept-charset="utf-8">
 				<input type="text" placeholder="ingresa tu mail">
 				<button type="submit">Enviar</button>
 			</form>
-			
+		</div>	
 	
 
 	</div>
+
+	<footer>
+		<h2>DESAFIO LATAM 2018 - CURSO FRONT END G7</h2>
+		
+	</footer>
 	
 </body>
 </html>
